# burn-after-reading

./: .gitignore  Dockerfile  Makefile  README.md  check-web.sh  instructions.md  manifest.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: buildService.yml  releaseService.yml
assets/compat/: config_spec.yaml
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: .eslintrc.json  angular.json  fe-config.json  ionic.config.json  package-lock.json  package.json  tsconfig.json
frontend/src/: global.scss  index.html  polyfills.ts
frontend/src/app/: app-routing.module.ts  app-type.pipe.spec.ts  app-type.pipe.ts  app.component.html  app.component.ts  app.module.ts
frontend/src/app/directives/: dnd.directive.ts
frontend/src/app/pages/: view-utils.ts
frontend/src/app/pages/read/: read-routing.module.ts  (+5 more)
frontend/src/app/services/: auth.store.ts  config.service.ts  demo-alert.service.ts  loader.service.ts  login.service.ts
frontend/src/app/util/: misc.util.ts  rxjs.util.ts  web.util.ts
frontend/src/theme/: variables.scss
scripts/: deps.ts  embassy.ts
scripts/procedures/: getConfig.ts  health.ts  healthChecks.ts  main.ts  migrations.ts  properties.ts  setConfig.ts
startos/: backups.ts  index.ts  init.ts  interfaces.ts  main.ts  manifest.ts  sdk.ts  store.ts  util.ts  utils.ts  vault.ts  wrapperData.ts
startos/actions/: index.ts  resetPassword.ts
startos/fileModels/: pwd.txt.ts
startos/init/: index.ts  taskResetPassword.ts
startos/install/versions/: index.ts  v0.1.7.0.ts
startos/procedures/: autoConfig.ts  backups.ts  index.ts  init.ts  interfaces.ts  main.ts  properties.ts
startos/procedures/actions/: index.ts  nameToLogs.ts  resetPassword.ts  setPassword.ts
startos/procedures/config/: index.ts  read.ts  save.ts  spec.ts
startos/procedures/config/file-models/: config.json.ts
startos/procedures/dependencies/: dependencyMounts.ts
startos/procedures/dependencies/dependencyConfig/: index.ts
startos/procedures/migrations/: index.ts  v0_1_5_2.ts
startos/versions/: index.ts
(+14 files in other folders)
