[package]
name = "burn-after-reading"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "A simple, fast, standalone, self-destructing pastebin service for sharing private information with other human beings. Simply type your message, choose your expiration and self-destruction rules, and share the ephemeral link. Your message never leaves the confines of your physical Embassy device."

[dependencies]
anyhow = "1.0.34"
async-compat = "0.1.4"
base64 = "0.13.0"
cookie = "0.14.3"
futures = "0.3.8"
generic-array = "0.14.4"
http = "0.2.1"
hyper = "0.13.9"
itertools = "0.9.0"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
sha2 = "0.9.2"
sled = "0.34.6"
time = "0.2.23"
tokio = { version = "0.2.22", features = ["full", "time"] }
warp = "0.2.5"
web-static-pack = "0.4.0"
