[package]
name = "burn-after-reading"
version = "0.1.5"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2021"
description = "A simple, fast, standalone service that uses Tor (.onion) ephemeral links to share encrypted messages and files that are destroyed (burned) after they are viewed. Content is stored directly on the Embassy, and there are no trusted 3rd parties."

[features]
demo = ["slog-bunyan"]

[dependencies]
anyhow = "1.0.34"
async-compat = "0.2.1"
base64 = "0.21.0"
cookie = "0.17.0"
futures = "0.3.8"
generic-array = "0.14.4"
http = "0.2.1"
hyper = "0.14.20"
itertools = "0.10.5"
lazy_static = "1.4.0"
rust-argon2 = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.9.13"
sha2 = "0.10.6"
sled = "0.34.6"
slog = "2.7.0"
slog-async = "2.5.0"
slog-bunyan = { version = "2.2.0", optional = true }
slog-term = "2.6.0"
time = "0.3.15"
tokio = { version = "1.21.2", features = ["full", "time"] }
warp = "0.3.3"
web-static-pack = "0.4.0"
